# clawdbot-python

./: COMPLETION_SUMMARY.md  LATEST_IMPROVEMENTS.md  PROJECT_COMPLETION_REPORT.md  README.md  README_CURRENT.md  RELEASE_NOTES_v0.5.0.md  pyproject.toml
.github/workflows/: ci.yml
clawdbot/: __init__.py  __main__.py  cli.py
clawdbot/agents/: __init__.py  context.py  errors.py  runtime.py  runtime_new.py  session.py
clawdbot/agents/providers/: __init__.py  anthropic_provider.py  base.py  bedrock_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
clawdbot/agents/tools/: base.py  bash.py  browser.py  canvas.py  channel_actions.py  cron.py  file_ops.py  image.py  nodes.py  patch.py  process.py  registry.py  sessions.py  tts.py  voice_call.py  web.py
clawdbot/api/: __init__.py  openai_compat.py  server.py
clawdbot/auth/: __init__.py  api_keys.py  middleware.py  rate_limiter.py
clawdbot/channels/: __init__.py  base.py  bluebubbles.py  connection.py  discord.py  enhanced_discord.py  enhanced_telegram.py  googlechat.py  imessage.py  line.py  matrix.py  mattermost.py  nextcloud.py  nostr.py  registry.py  signal.py  slack.py  teams.py  telegram.py  tlon.py  webchat.py  whatsapp.py  zalo.py
clawdbot/cli/: channels_cmd.py  gateway_cmd.py  main.py
clawdbot/config/: __init__.py  loader.py  schema.py  settings.py
clawdbot/gateway/: handlers.py  server.py
clawdbot/gateway/protocol/: __init__.py  frames.py
clawdbot/monitoring/: __init__.py  health.py  logger.py  metrics.py
clawdbot/plugins/: loader.py  types.py
clawdbot/skills/: loader.py  types.py
clawdbot/web/: app.py
examples/: 01_basic_agent.py  02_with_tools.py  03_monitoring.py  04_api_server.py  05_telegram_bot.py  06_gemini_example.py  07_multi_provider.py
extensions/memory-lancedb/: plugin.py
extensions/signal/: plugin.py
extensions/slack/: plugin.py
extensions/teams/: plugin.py
extensions/telegram/: plugin.py
extensions/tlon/: plugin.py
extensions/whatsapp/: plugin.py
extensions/zalo/: plugin.py
tests/: conftest.py  test_auth.py  test_channels_enhanced.py  test_config.py  test_monitoring.py  test_runtime.py  test_session.py  test_skills.py  test_tools.py  test_tools_base.py  test_tools_enhanced.py
tests/integration/: test_agent_flow.py  test_api_endpoints.py
